# fly-metrics-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
src/: main.rs
