[package]
name = "fly-metrics-proxy"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
axum = "0.8.1"
prometheus-parse = "0.2.5"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["std", "derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
mockito = "1.6.1"
hyper = "1.5.2"
